// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HarnessApprovalLogsView - Loading No spinner in case of Loading - missing approvalInstanceId: Loading State - missing approvalInstanceId 1`] = `
<div
  data-testid="harnessApprovalLogsTest"
>
  <pre
    class="container"
  >
    <div
      class="noLogs"
    >
      common.logs.noLogsText
    </div>
  </pre>
</div>
`;

exports[`HarnessApprovalLogsView - Success Render proper in case of successful API, waiting and auth=false 1`] = `
<div>
  <div
    class="logViewer"
  >
    <div
      class="main"
      data-mode="console-view"
    >
      <div
        class="header"
      >
        <div>
          execution.consoleLogs
        </div>
        <div
          class="rhs"
        >
          <div
            class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
            data-name=""
          >
            <span
              class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
              data-icon="thinner-search"
            >
              <svg
                fill="none"
                height="14"
                viewBox="0 0 16 16"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <input
              class="bp3-input  ExpandingSearchInput--find"
              dir="auto"
              placeholder="Search"
              style="padding-right: 0px;"
              type="search"
              value=""
            />
          </div>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="full-screen"
            >
              <svg
                fill="none"
                height="22"
                viewBox="0 0 24 24"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        data-testid="harnessApprovalLogsTest"
      >
        <div
          class="approvalRow error"
        >
          User is not authorised
        </div>
        <pre
          class="container"
        >
          <div
            class="noLogs"
          >
            common.logs.noLogsText
          </div>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`HarnessApprovalLogsView - Success Render proper in case of successful API, waiting and auth=true 1`] = `
<div
  data-testid="harnessApprovalLogsTest"
>
  <div
    class="approvalRow"
  >
    <div>
      pipeline.approvalStage.approvalStageLogsViewMessage
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-left-xlarge StyledProps--intent-primary Button--with-current-color Button--without-shadow"
      data-testid="approvalButton"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <span>
          approvalStage.title
        </span>
      </span>
    </button>
  </div>
  <pre
    class="container"
  >
    <div
      class="noLogs"
    >
      common.logs.noLogsText
    </div>
  </pre>
</div>
`;

exports[`HarnessApprovalLogsView - Success Render proper in case of successful API, waiting and auth=true: approvalForm 1`] = `
<div
  class="bp3-dialog Dialog--dialog approveRejectModal"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      <span>
        pipeline.approvalStep.execution.inputsTitle
      </span>
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children StyledProps--padding-none"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="harnessApproval harnessApprovalLogsView"
      >
        <div
          class="inputs"
        >
          <div
            class="bp3-form-group heading"
          >
            <label
              class="bp3-label"
              for="comments"
            >
              Comments
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <textarea
                autocomplete="off"
                class="bp3-input bp3-fill"
                maxlength="1024"
                name="comments"
              />
            </div>
          </div>
          <div
            class="actions"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-tick StyledProps--main"
                icon="tick"
              >
                <svg
                  data-icon="tick"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    tick
                  </desc>
                  <path
                    d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                <span>
                  common.approve
                </span>
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-cross StyledProps--main"
                icon="cross"
              >
                <svg
                  data-icon="cross"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cross
                  </desc>
                  <path
                    d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                <span>
                  common.reject
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer />
</div>
`;
